--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -58,4 +58,14 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	  <url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<jsp-config>
+		<jsp-property-group>
+			<url-pattern>*.jsp</url-pattern>
+			<el-ignored>false</el-ignored>
+			<page-encoding>UTF-8</page-encoding>
+			<scripting-invalid>false</scripting-invalid>
+			<include-prelude>/WEB-INF/view/common/header.jsp</include-prelude>
+		</jsp-property-group>
+	</jsp-config>
+
 </web-app>
